Revision history for Term-ReadLine-Event

{{$NEXT}}
        * Some testers' :0 don't seem to work, so detect that and skip
          instead of fail Tk tests.

0.03    April 5, 2012
        + Add Tk example in the hopes T::RL eventually deprecates its Tk
          interface in favour of this interface.
        + Add with_Tk method for much the same reason.

0.02    March 26, 2012
        * CPAN didn't like the ex directory, hopefully this fixes it.

0.01    March 26, 2012
        * From initial concept to first release.